--- a/js/packages/cli/package.json
+++ b/js/packages/cli/package.json
@@ -44,13 +44,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.36.0",
-    "@project-serum/anchor": "^0.17.0",
     "@metaplex/arweave-cost": "^1.0.4",
+    "@project-serum/anchor": "^0.17.0",
     "@solana/spl-token": "^0.1.8",
     "arweave": "^1.10.16",
     "borsh": "^0.4.0",
     "canvas": "^2.8.0",
     "commander": "^8.1.0",
+    "dot-prop": "^6.0.1",
     "form-data": "^4.0.0",
     "image-data-uri": "^2.0.1",
     "imagemin": "^7.0.1",
