--- a/rust/package.json
+++ b/rust/package.json
@@ -7,13 +7,14 @@
   "type": "module",
   "author": "Metaplex Contributors",
   "devDependencies": {
-    "@types/mocha": "^9.0.0",
     "@project-serum/anchor": "0.17.0",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.21.0",
+    "@types/mocha": "^9.0.0",
     "mocha": "^9.0.3",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5",
-    "@solana/web3.js": "^1.21.0"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "idl": "node test/idlToTs",
