--- a/rust/package.json
+++ b/rust/package.json
@@ -11,6 +11,7 @@
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.21.0",
     "@types/mocha": "^9.0.0",
+    "dot-prop": "^6.0.1",
     "mocha": "^9.0.3",
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
